--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,9 @@ env:
 jobs:
   test-java-snapshot:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      packages: read
     steps:
       # Run `git checkout`
       - uses: actions/checkout@v3
