--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,17 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>license-maven-plugin</artifactId>
                 <version>2.0.0</version>
+                <configuration>
+                    <forceDownload>true</forceDownload>
+                    <useDefaultUrlReplacements>true</useDefaultUrlReplacements>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>download-licenses</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
         </plugins>
