--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      packages: read
     steps:
       # Run `git checkout`
       - uses: actions/checkout@v3
@@ -59,7 +60,7 @@ jobs:
 
       - name: Build package and download license information
         run: |
-          mvn package license:download-licenses -Dchangelist=${{ env.CHANGELIST }} -DskipTests=true -f pom.xml -Pexecutable
+          mvn package -Dchangelist=${{ env.CHANGELIST }} -DskipTests=true -f pom.xml -Pexecutable
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
