Prevent Log Spam: Summarize message encoding errors by default. (#90)
- In order to give the user full access to all information, a
configuration option SummarizeMessageEncodingErrors was introduced,
which defaults to true, but can be set to false when more information is
needed.
- Also had to adapt a large number of Test cases.

# Checklist

The following aspects have been respected by the author of this pull
request, confirmed by both pull request assignee **and** reviewer:

* Adherence to coding conventions
  * [x] Pull Request Assignee
  * [x] Reviewer
* Adherence to javadoc conventions
  * [x] Pull Request Assignee
  * [x] Reviewer
* Changelog update (necessity checked and entry added or not added
respectively)
  * [x] Pull Request Assignee
  * [x] Reviewer
* README update (necessity checked and entry added or not added
respectively)
  * [x] Pull Request Assignee
  * [x] Reviewer
* config update (necessity checked and entry added or not added
respectively)
  * [x] Pull Request Assignee
  * [x] Reviewer
* SDCcc executable ran against a test device (if necessary)
  * [x] Pull Request Assignee
  * [x] Reviewer

---------

Co-authored-by: Malte Grebe-Lüth <104556762+belagertem@users.noreply.github.com>

--- a/configuration/config.toml
+++ b/configuration/config.toml
@@ -2,6 +2,8 @@
 CIMode=false
 GraphicalPopups=true
 TestExecutionLogging=true
+EnableMessageEncodingCheck=true
+SummarizeMessageEncodingErrors=true
 
 [SDCcc.TLS]
 FileDirectory="./configuration"
