made multicastTTL configurable in SDCcc config.toml.

--- a/configuration/config.toml
+++ b/configuration/config.toml
@@ -15,6 +15,7 @@ EnabledProtocols = ["TLSv1.2", "TLSv1.3"]
 [SDCcc.Network]
 InterfaceAddress="127.0.0.1"
 MaxWait=10
+MulticastTTL=128
 
 [SDCcc.Consumer]
 Enable=true
