--- a/sdccc/pom.xml
+++ b/sdccc/pom.xml
@@ -246,6 +246,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>${junitVersion}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <reporting>
