--- a/pom.xml
+++ b/pom.xml
@@ -37,25 +37,6 @@
 
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>${execPluginVersion}</version>
-                <configuration>
-                    <skip>true</skip>
-                    <executable>${java.home}/bin/java</executable>
-                    <arguments>
-                        <argument>-classpath</argument>
-                        <classpath/>
-                        <argument>com.draeger.medical.sdccc.TestSuite</argument>
-                        <argument>-c</argument>
-                        <argument>${project.basedir}/../configuration/config.toml</argument>
-                        <argument>-t</argument>
-                        <argument>${project.basedir}/../configuration/test_configuration.toml</argument>
-                    </arguments>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
                 <artifactId>license-maven-plugin</artifactId>
                 <version>2.0.0</version>
                 <executions>
@@ -92,6 +73,58 @@
                 </configuration>
             </plugin>
 
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>${execPluginVersion}</version>
+                <configuration>
+                    <skip>true</skip>
+                    <executable>${java.home}/bin/java</executable>
+                    <arguments>
+                        <argument>-classpath</argument>
+                        <classpath/>
+                        <argument>com.draeger.medical.sdccc.TestSuite</argument>
+                        <argument>-c</argument>
+                        <argument>${project.basedir}/../configuration/config.toml</argument>
+                        <argument>-t</argument>
+                        <argument>${project.basedir}/../configuration/test_configuration.toml</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>exec-sdccc</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>${execPluginVersion}</version>
+                        <executions>
+                            <execution>
+                                <id>951d1725-bb0b-40db-9d4e-d1947a8318ed</id>
+                                <configuration>
+                                    <skip>false</skip>
+                                    <executable>${java.home}/bin/java</executable>
+                                    <arguments>
+                                        <argument>-classpath</argument>
+                                        <classpath/>
+                                        <argument>com.draeger.medical.sdccc.TestSuite</argument>
+                                        <argument>-c</argument>
+                                        <argument>${project.basedir}/../configuration/config.toml</argument>
+                                        <argument>-t</argument>
+                                        <argument>${project.basedir}/../configuration/test_configuration.toml</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
