--- a/sdccc/pom.xml
+++ b/sdccc/pom.xml
@@ -423,19 +423,26 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>${execPluginVersion}</version>
-                <configuration>
-                    <skip>false</skip>
-                    <executable>${java.home}/bin/java</executable>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 
     <profiles>
+        <profile>
+            <id>exec-sdccc</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>${execPluginVersion}</version>
+                        <configuration>
+                            <skip>false</skip>
+                            <executable>${java.home}/bin/java</executable>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
         <profile>
             <id>executable</id>
             <build>
@@ -472,7 +479,7 @@
                                         <fileVersion>${revision}.0</fileVersion>
                                         <txtFileVersion>${revision}${changelist}</txtFileVersion>
                                         <fileDescription>${project.name}</fileDescription>
-                                        <copyright>2023 Draegerwerk AG &amp; Co. KGaA</copyright>
+                                        <copyright>2024 Draegerwerk AG &amp; Co. KGaA</copyright>
                                         <productVersion>${revision}.0</productVersion>
                                         <txtProductVersion>${revision}${changelist}</txtProductVersion>
                                         <productName>${project.name}</productName>
