--- a/sdccc/pom.xml
+++ b/sdccc/pom.xml
@@ -441,6 +441,7 @@
                 <configuration>
                     <buildUponDefaultConfig>true</buildUponDefaultConfig>
                     <config>dev_config/detekt.yml</config>
+                    <report>html:sdccc/target/detekt.html</report>
                 </configuration>
                 <executions>
                     <execution>
