--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,7 +23,7 @@ org-junit = "5.10.3"
 org-junit-platform = "1.10.2"
 org-mockito = "5.12.0"
 org-mockito-kotlin = "5.4.0"
-org-somda-sdc = "6.2.0-SNAPSHOT"
+org-somda-sdc = "6.2.0"
 org-tomlj = "1.0.0"
 threeten-jaxb-core = "2.2.0"
 jakarta-xml-bind = "4.0.2"
