--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Retrieve current version from gradle.properties
         run: |
-          echo RELEASE_VERSION=$(./gradlew properties --no-daemon --console=plain -q | grep "^version:" | awk '{print $2}')  | sed "s/-SNAPSHOT//" >> $GITHUB_ENV
+          echo RELEASE_VERSION=$(./gradlew properties --no-configuration-cache --no-daemon --console=plain -q | grep "^version:" | awk '{print $2}')  | sed "s/-SNAPSHOT//" >> $GITHUB_ENV
           echo GIT_HASH_SHORT=$(git rev-parse --short "$GITHUB_SHA") >> $GITHUB_ENV
 
       - name: Remove SNAPSHOT suffix for release
@@ -46,7 +46,7 @@ jobs:
       - name: Run headless test
         uses: GabrielBB/xvfb-action@v1
         with:
-          run: ./gradlew check -Prevision=${{ env.RELEASE_VERSION }} -Pchangelist=${{ env.CHANGELIST }}
+          run: ./gradlew check --no-build-cache -Prevision=${{ env.RELEASE_VERSION }} -Pchangelist=${{ env.CHANGELIST }}
           working-directory: ./ #optional
           options: #optional
         env:
